Added main project files + firebase config stuff

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
+    "paths": {
+      "store": ["src/store.ts"]
+    },
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
