Updated to @angular/fire, and created AuthService

--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^5.2.3",
     "@angular/forms": "~8.2.14",
     "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "angularfire2": "^5.2.3",
     "core-js": "^3.6.1",
     "firebase": "^7.6.1",
     "reflect-metadata": "^0.1.13",
